@@ -1,8 +1,10 @@
 package features.jep445_instance_main_methods;
+// java --source 21 --enable-preview NewMainApp.java
+// javac --release 21 --enable-preview NewMainApp.java
 
 public class NewMainApp {
 
   public static void main(String[] args) {
-
+    System.out.println("Regular <Hello, World!>");
   }
 }
